[tool.poetry]
name = "pwhomework11"
version = "0.1.0"
description = ""
authors = ["Jymbarbaruoky <116517553+Jymbarbaruoky@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
alembic = "^1.10.3"
pydantic = {extras = ["email"], version = "^1.10.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
